--- a/CHANGES
+++ b/CHANGES
@@ -298,6 +298,21 @@ Created getInitialDirs() (pUtil)
 Updated getModernASetup() to handle nightlies correctly. Sending swbase to getModernASetup() from two places (ATLASExperiment)
 Corrected LastTimeFilesWereModified -> lastTimeFilesWereModified in monitor_job() (Monitor)
 Created EventRanges functino module, used by RunJobEvent (EventRanges)
+Added file path to payload stdout to stdout_dictionary dictionary in getStdoutDictionary() (pUtil)
+Added stdout_path entry to global environment (environment)
+Setting the stdout_path in __updateJobs() and __cleanUpEndedJobs() (Monitor)
+Sending stdout_path to updatePandaServer() from postJobTask() (JobLog)
+Added stdout_path argument to updatePandaServer() (JobLog)
+Sending stdout_path to client.updatePandaServer() from updatePandaServer() (JobLog) 
+Added stdout_path argument to updatePandaServer() (PandaServerClient)
+Added sitename argument etc to getEnvVars2Cmd() and addEnvVars2Cmd() and sent sitename to their calls from getJobExecutionCommand() (ATLASExperiment)
+Created extractSEPath() used by getGroupDiskPath() (SiteMover)
+Created getGroupDiskPath() used by getPreDestination() (SiteMover, ATLASSiteInformation)
+Moved getPreDestination() and getGroupDiskPath() to SiteMover (SiteMover, ATLASSiteInformation)
+Created getDateDirs() used by updatePandaServer() (PandaServerClient)
+Updated getSpaceTokenForFile() for GROUPDISK special case (Mover)
+Added dst: handling for GROUPDISK in stageOutFile() (LocalSiteMover)
+Added dst: handling for GROUPDISK in put_data() (lcgcpSiteMover, lcgcp2SiteMover, xrootdSiteMover, GFAL2SiteMover, curlSiteMover)
 
 Code contribution from Edward Karavakis, September 5, 2014:
 
