--- a/CHANGES
+++ b/CHANGES
@@ -445,6 +445,30 @@ Sending altpath (filenamePayloadMetadata) to getMetadata() from updatePandaServe
 Added altpath argument to getMetadata() (pUtil)
 Updated getMetadata() for using altpath when possible. Replaced 'id' with 'jobId' (pUtil)
 Added special case for AtlasDerivation in getProperASetup() (ATLASExperiment)
+Changed %d to %s for jobId conversion in cleanup() (Cleaner)
+Removed repr() around jobId in put(), rename(), remove() (JobState)
+Changed default jobId=0 to jobId='0' in Job class definition (Job)
+Changed PandaID=%d to PandaID=%s in displayJob() (Job)
+Removed int() conversion from jobId in setJobDef() (Job)
+Removed str() from jobId in setJobDef() (Job)
+Changed %d to %s in jobId conversion in getLogFileGuid(), postJobTask() (JobLog)
+Removed str() around jobId in transferActualLogFile(), createMetadataForOutput(), addWantedFiles() (JobLog)
+Removed repr() around jobId in createMetadataForOutput(), transferAdditionalCERNVMFiles() (JobLog)
+Changed %d to %s for jobId in run(), updateServer(), recoverWithServer() (JobRecovery)
+Changed %d to %s for jobId in __killLoopingJob(), __updateJobs(), __createJobWorkdir() (Monitor)
+Removed str() from jobId in monitor_job() (Monitor)
+Removed str() from jobId in getXML() (PandaServerClient)
+Removed repr() from jobId in updatePandaServer() (PandaServerClient)
+Changed %d to %s for jobId in cleanup(), createFileMetadata(), __main__() (RunJob)
+Removed repr() from jobId in moveTrfMetadata() (RunJob)
+Changed %d to %s for jobId in cleanup(), createFileMetadata(), __main__() (RunJobEvent)
+Changed %d to %s for jobId in __main__() (RunJobTitan)
+Removed int conversion from jobinfo["jobid"] in handle() (UpdateHandler)
+Removed str conversion for jobId in __run_glexec() (glexec_utils)
+Removed repr() from jobId in getMetadata() (pUtil)
+Changed %d to %s in makeJobReport(), moveToExternal() (pUtil)
+Removed str() from jobId in moveLostOutputFiles() (pilot)
+Changed %d to %s in RecoverLostJobs(), getNewJob() (pilot)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
