--- a/README
+++ b/README
@@ -1,2 +1,8 @@
-Initial Check-in.
-Again.
+This is the PanDA Pilot distribution.
+
+Please refer to the CHANGES file for update info.
+
+See the PanDA Pilot wiki page for documentation: https://twiki.cern.ch/twiki/bin/view/PanDA/PanDA
+
+
+Paul Nilsson for the PanDA Team.
