--- a/CHANGES
+++ b/CHANGES
@@ -472,6 +472,7 @@ Changed %d to %s in RecoverLostJobs(), getNewJob() (pilot)
 Updated extractAppdir() for allowing AtlasP1HLT and AtlasHLT jobs anywhere (ATLASSiteInformation
 Only using special setup for HLT for AFS, ie if $VO_ATLAS_RELEASE_DIR exists, in getProperSiterootAndCmtconfig(), getProperASetup() (ATLASExperiment)
 Verifying that atlasProject is not already added to cmd1 in updateCmd1WithProject() (ATLASExperiment)
+Updated getProperPaths() to handle non-rucio SURL properly (ATLASSiteInformation)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
