Updated RunJob and RunJobEvent for missing () in sig2exc

--- a/CHANGES
+++ b/CHANGES
@@ -507,7 +507,7 @@ Bug fix related to missing X509_CERT_DIR (aria2SiteMover)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 59d:
-(test git push)
+Corrected runJob.getGlobalErrorCode -> runJob.getGlobalErrorCode() in sig2exc(), leading to wrong error code labelling (RunJob, RunJobEvent)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
