--- a/CHANGES
+++ b/CHANGES
@@ -508,6 +508,7 @@ Bug fix related to missing X509_CERT_DIR (aria2SiteMover)
 
 59d:
 Corrected runJob.getGlobalErrorCode -> runJob.getGlobalErrorCode() in sig2exc(), leading to wrong error code labelling (RunJob, RunJobEvent)
+Removed explicit https:// from command line in surls2metalink() (aria2cSiteMover)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
