--- a/CHANGES
+++ b/CHANGES
@@ -509,6 +509,8 @@ Bug fix related to missing X509_CERT_DIR (aria2SiteMover)
 59d:
 Corrected runJob.getGlobalErrorCode -> runJob.getGlobalErrorCode() in sig2exc(), leading to wrong error code labelling (RunJob, RunJobEvent)
 Removed explicit https:// from command line in surls2metalink() (aria2cSiteMover)
+Verifying that httpredirector starts with https:// or http://, and if not sets it to start with https://, in surls2metalink() (aria2cSiteMover)
+Replaced all four occurances of 'https://voatlasrucio-redirect-prod-01.cern.ch' with 'https://rucio-lb-prod.cern.ch' (Mover)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
