--- a/CHANGES
+++ b/CHANGES
@@ -516,6 +516,8 @@ Changed time-out from 3600 s to 600 s (xrootdObjectstoreSiteMover)
 glExec update from Edward Karavakis to resolve issues at two Canadian sites that do not have the $GLEXEC_LOCATION env var set (pilot, glexec_utils)
 Skipping nCore checks for install jobs, in postGetJobActions() (ATLASExperiment)
 Getting JSON instead of XML in getPayloadMetadataFilename() (PandaServerClient)
+Updated TimerCommand to handle function time outs (Wen Guan)
+Added time-outs to S3ObjectstoreSiteMover (Wen Guan)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
