--- a/CHANGES
+++ b/CHANGES
@@ -536,6 +536,7 @@ Corrected ['pilotId'] -> env['pilotId'] in argParser() (pilot)
 Now returning pilotErrorDiag from verifyReplicasDictionary(), received in getPoolFileCatalog() (Mover)
 Improved error message for replica missing in Rucio catalog, in getPoolFileCatalog() (Mover)
 Added missing return objects in stageOut() (S3ObjectstoreSiteMover)
+Added debugging info to S3 key download in getSecurityKey() (ATLASSiteInformation)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
