Updated process handling

--- a/CHANGES
+++ b/CHANGES
@@ -538,6 +538,7 @@ Improved error message for replica missing in Rucio catalog, in getPoolFileCatal
 Added missing return objects in stageOut() (S3ObjectstoreSiteMover)
 Added debugging info to S3 key download in getSecurityKey() (ATLASSiteInformation)
 Changed aipanda007 to pandaserver.cern.ch in getSecurityKey() (ATLASSiteInformation)
+Updated process handling. Code from Wen Guan (TimerCommand)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
