Added try-statement for rucio.client import

--- a/CHANGES
+++ b/CHANGES
@@ -543,6 +543,12 @@ Removed unwanted log messages (aria2cSiteMover)
   
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+59f:
+
+Put a try-statement around the rucio.client import in aria2cSiteMover, not always available. Caused problem om Nordugrid HPC sites
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 Prior to file registration (i.e. for US sites that still uses the pilot for file registrations), the pilot sets the LFC_HOST env variable; no longer needed for file 
