Fixed a problem with missing metadata filename

--- a/CHANGES
+++ b/CHANGES
@@ -551,6 +551,14 @@ Copying jobReport to pilots workdir to make it available for PandaServerClient a
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+59g:
+
+Using default metadata XML file if reportVersion is not found in jobReport.json, in getPayloadMetadataFilename() (PandaServerClient)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+
 TODO:
 
 Prior to file registration (i.e. for US sites that still uses the pilot for file registrations), the pilot sets the LFC_HOST env variable; no longer needed for file 
