Now sending jobReport.json

--- a/CHANGES
+++ b/CHANGES
@@ -554,6 +554,7 @@ Copying jobReport to pilots workdir to make it available for PandaServerClient a
 59g:
 
 Using default metadata XML file if reportVersion is not found in jobReport.json, in getPayloadMetadataFilename() (PandaServerClient)
+Now sending jobReport.json if report version >= 1.0.0 in getPayloadMetadataFilename() (PandaServerClient)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
